2010-05-14  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Darin Adler.

        Add test to check that setting various CanvasRenderingContext2D properties
        to invalid values is ignored.

        https://bugs.webkit.org/show_bug.cgi?id=38841

        * fast/canvas/canvas-invalid-values-expected.txt: Added.
        * fast/canvas/canvas-invalid-values.html: Added.
        * fast/canvas/script-tests/canvas-invalid-values.js: Added.
        (trySettingMiterLimit):
        (trySettingLineWidth):
        (trySettingShadowBlur):
        (trySettingShadowOffsetX):
        (trySettingShadowOffsetY):
2010-05-14  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        Ignore invalid values for various CanvasRenderingContext2D properties
        (lineWidth, miterLimit, shadowOffsetX, shadowOffsetY and shadowBlur)

        https://bugs.webkit.org/show_bug.cgi?id=38841

        Test: fast/canvas/canvas-invalid-values.html

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setLineWidth):
        (WebCore::CanvasRenderingContext2D::setMiterLimit):
        (WebCore::CanvasRenderingContext2D::setShadowOffsetX):
        (WebCore::CanvasRenderingContext2D::setShadowOffsetY):
        (WebCore::CanvasRenderingContext2D::setShadowBlur):

git-svn-id: svn://svn.chromium.org/blink/trunk@59447 bbb929c8-8fbe-4397-9dbb-9b2b20218538